--- a/tasks/packages/prepare/portage/profile.yml
+++ b/tasks/packages/prepare/portage/profile.yml
@@ -1,15 +1,23 @@
 ---
-- name: Portage - Profile - Symbolic link
+- name: Prepare - Portage - Profile - Check for broken link
+  ansible.builtin.stat:
+    path: /etc/portage/make.profile
+    follow: true
+  register: result
+
+- name: Prepare - Portage - Profile - Force to default profile
+  when: not result.stat.exists
   become: true
   ansible.builtin.file:
     src: |-
       {{
-        '../..' + system_portage_directory + '/profiles/' +
-        system_portage_profile[system_profile] +
+        '../..' + system_portage_directory +
+        '/profiles/default/linux/amd64/17.1/no-multilib' +
         ('/systemd' if ansible_service_mgr == 'systemd' else '')
       }}
     dest: /etc/portage/make.profile
     state: link
     force: true
     follow: false
-  notify: emerge --newuse
+  notify:
+    - emerge --newuse
