--- a/tasks/packages/requirements/pacman/yay.yml
+++ b/tasks/packages/requirements/pacman/yay.yml
@@ -17,6 +17,7 @@
               - base-devel
               - fakeroot
               - git
+              - make
 
         - name: Pacman - AUR - Yay - Clone Yay from github
           ansible.builtin.git:
