--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,6 +1,6 @@
 ---
 - name: Packages - Load variables
-  when: packages is undefined
+  when: system_packages_computed is undefined
   ansible.builtin.import_tasks: "{{ role_path }}/tasks/facts.yml"
 
 - name: Packages
