--- a/tasks/packages/prepare/portage/cache.yml
+++ b/tasks/packages/prepare/portage/cache.yml
@@ -1,10 +1,10 @@
 ---
-- name: Portage - Cache - Load initial config
+- name: Prepare - Portage - Cache - Load initial config
   register: initial_config
   ansible.builtin.slurp:
     src: /etc/portage/make.conf
 
-- name: Portage - Cache - Configuration parameter
+- name: Prepare - Portage - Cache - Configuration parameter
   vars:
     is_default: "{{ system_portage_directory == default_portage_directory }}"
     line: PORTDIR="{{ system_portage_directory }}"
@@ -15,24 +15,24 @@
     regex: ^PORTDIR=
     state: "{{ is_default | ternary('absent', 'present') }}"
 
-- name: Portage - Cache - Predefined Portage directory
+- name: Prepare - Portage - Cache - Predefined Portage directory
   ansible.builtin.set_fact:
     portdir_matches: "{{ initial_config.content | b64decode | regex_findall('(?<!#)PORTDIR=\"(.+)\"') }}"
 
-- name: Portage - Cache - Move Portdir
+- name: Prepare - Portage - Cache - Move Portdir
   vars:
     initial_value: "{{ (portdir_matches | length > 0) | ternary(portdir_matches | last, default_portage_directory) }}"
   when: initial_value != system_portage_directory
   become: true
   block:
-    - name: Portage - Cache - Portdir - Parent directory
+    - name: Prepare - Portage - Cache - Portdir - Parent directory
       ansible.builtin.file:
         path: "{{ system_portage_directory | dirname }}"
         state: directory
         mode: "0755"
         recurse: true
 
-    - name: Portage - Cache - Portdir - Move data
+    - name: Prepare - Portage - Cache - Portdir - Move data
       ansible.builtin.command:
         cmd: "mv '{{ initial_value }}' '{{ system_portage_directory }}'"
       changed_when: true
